Bug 46696 - xscope-1.3.1 doesn't fallback to alternate transport on connection failure
Summary: xscope-1.3.1 doesn't fallback to alternate transport on connection failure
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: unspecified
Hardware: Other FreeBSD
: low minor
Assignee: Alan Coopersmith
QA Contact: Xorg Project Team
URL:
Whiteboard: 2012BRB_Reviewed
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-27 14:09 UTC by Peter Jeremy
Modified: 2012-07-08 11:24 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Try alternate protocol on X11 connection failure. (1.68 KB, patch)
2012-02-27 14:09 UTC, Peter Jeremy
no flags Details | Splinter Review

Description Peter Jeremy 2012-02-27 14:09:49 UTC
Created attachment 57737 [details] [review]
Try alternate protocol on X11 connection failure.

In USE_XTRANS mode, MakeConnection() cycles through a selection of protocol choices until it finds one where it can open a socket to the server.  It then attempts an X11 connection via that socket and aborts if one isn't possible.

The attached patch modifies the code to try an alternate protocol if the X11 connection fails.
Comment 1 Alan Coopersmith 2012-07-08 11:24:04 UTC
Tested by starting Xephyr :25 -nolisten unix and xscope -o25 and verified
that before this patch, xscope exited with fatal error when it couldn't
connect to the Unix socket and afterwards it correctly fell back to TCP.

Thanks for the patch - pushed to git master for next release:
http://cgit.freedesktop.org/xorg/app/xscope/commit/?id=ea0a2788b1e82f2b19a3c46e6d42d0a86fd17f38


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.